assets/styles.css
@import url("https://fonts.googleapis.com/css?family=Raleway:200");
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: white;
  font-family: "Raleway";
}
body {
  height: 100vh;
}

.main-container {
  background: linear-gradient(to top, #00c6fb 0%, #005bea 100%);
  background-repeat: no-repeat;
  display: grid;
  grid-template-rows: 1fr 7fr;
  height: 100%;
}
.input-container {
  display: flex;
  justify-content: right;
  align-items: center;
  gap: 20px;
  padding-right: 40px;
}
.search-button {
  background: none;
  border: none;
  cursor: pointer;
  height: 30px;
}
.search-button > img {
  height: 100%;
  width: auto;
}
.user-input {
  margin: 30px 20px;
  width: 20em;
  border-radius: 8px;
  border-style: solid;
  color: black;
  font-weight: bolder;
  text-align: center;
}
.weather-container {
  display: grid;
  grid-template-rows: 1fr 5fr 2fr;
}
.city-name {
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bolder;
  font-size: 60px;
  letter-spacing: 5px;
}

.average-info {
  display: flex;
  justify-content: center;
  align-items: center;
}
.average-info > * {
  flex-grow: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bolder;
  font-size: 50px;
  text-wrap: wrap;
}

.hourly-averages {
  display: flex;
}
.hourly-averages > div {
  display: flex;
  width: 100%;
  flex-direction: column;
}
.hourly-averages > div > div {
  width: 100%;
}
.hour-info,
.hour-title {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-weight: bolder;
  font-size: 20px;
}
.hidden {
  display: none;
}

